added 2fa ,fixed auth bugs
