# cmd/api/api.go
@@ -7,8 +7,10 @@ import (
 
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
+	"github.com/go-chi/cors"
 	"github.com/iangechuki/go-ecommerce/docs"
 	"github.com/iangechuki/go-ecommerce/internal/auth"
+	"github.com/iangechuki/go-ecommerce/internal/env"
 	"github.com/iangechuki/go-ecommerce/internal/mailer"
 	"github.com/iangechuki/go-ecommerce/internal/store"
 	httpSwagger "github.com/swaggo/http-swagger/v2"
@@ -22,6 +24,7 @@ type application struct {
 	accessAuthenticator  auth.Authenticator
 	refreshAuthenticator auth.Authenticator
 	mailer               mailer.Client
+	jobQueue             chan Job
 }
 
 type config struct {
@@ -74,6 +77,17 @@ func healthCheckHandler(w http.ResponseWriter, r *http.Request) {
 func (app *application) mount() *chi.Mux {
 
 	r := chi.NewRouter()
+	r.Use(cors.Handler(cors.Options{
+		AllowedOrigins:   []string{env.GetString("CORS_ALLOWED_ORIGINS", "http://localhost:3000")},
+		AllowedMethods:   []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
+		AllowedHeaders:   []string{"Accept", "Authorization", "Content-Type", "X-CSRF-Token"},
+		ExposedHeaders:   []string{"Link"},
+		AllowCredentials: true,
+		MaxAge:           300, // Maximum value not ignored by any of major browsers
+	}))
+	r.Use(middleware.RealIP)
+	r.Use(middleware.RequestID)
+	r.Use(middleware.Recoverer)
 	r.Use(middleware.Logger)
 	r.Route("/v1", func(r chi.Router) {
 		r.Get("/swagger/*", httpSwagger.Handler(
@@ -87,19 +101,30 @@ func (app *application) mount() *chi.Mux {
 		// r.Get("/mail/reset-password/send", app.sendPasswordResetEmailTrial)
 
 		r.Route("/auth", func(r chi.Router) {
+			// public routes
 			r.Post("/register", app.registerUserHandler)
 			r.Post("/login", app.loginUserHandler)
 			r.Get("/verify", app.verifyUserHandler)
 			r.Post("/forgot-password", app.forgotPasswordHandler)
 			r.Post("/reset-password", app.resetPassword)
-
 			r.Get("/refresh", app.refreshTokenHandler)
 			r.Post("/logout", app.logoutUserHandler)
+			// 2fa public endpoint
+			r.Post("/2fa/login", app.login2FAHandler)
+			// authenticated 2FA endpoints
+
 		})
 		r.Route("/user", func(r chi.Router) {
+			r.Use(app.AuthTokenMiddleware)
 			r.Post("/change-password", app.changePasswordHandler)
+			r.Route("/2fa", func(r chi.Router) {
+				r.Get("/enable", app.enable2FAHandler)
+				r.Post("/disable", app.disable2FAHandler)
+				r.Post("/verify", app.verify2FAHandler)
+			})
 		})
 		r.Route("/products", func(r chi.Router) {
+			r.Use(app.AuthTokenMiddleware)
 			r.Get("/", app.listProductsHandler)
 			// r.Post("/", app.createProductHandler)
 		})
